Search box text overflows as ellipsis (bug 1196711)

--- a/static/css/impala/header.less
+++ b/static/css/impala/header.less
@@ -433,6 +433,7 @@ button.search-button {
     .box-shadow(0 0 2px rgba(0, 0, 0, 0.4) inset);
     float: left;
     font: 14px @head-sans;
+    text-overflow: ellipsis;
     padding: 6px 6px 6px 32px;
     .width-calc(~'100% - 42px', 238px);
 }
